--- a/bezier.properties
+++ b/bezier.properties
@@ -1,14 +1,14 @@
-#Sat Feb 11 18:11:41 CET 2023
-last.fil=bez03Primo.json
+#Sun Feb 12 18:03:44 CET 2023
+last.fil=bez02Primo.json
 last.dir=F\:\\java\\photon2\\bezier\\dati
-disegna.griglia=false
+disegna.griglia=true
 tipo.curva=Bezier
-opts.dimy=300
-frame.posx=-1161
-opts.dimx=400
-frame.posy=245
+opts.dimy=182
+frame.posx=-1212
+opts.dimx=358
+frame.posy=250
 opts.posx=-1556
-opts.posy=395
-frame.dimy=725
-frame.dimx=1161
-bordo.disegna=false
+opts.posy=351
+frame.dimy=623
+frame.dimx=845
+bordo.disegna=true
