aggiunto la gestione 'ultimi files'

--- a/bezier.properties
+++ b/bezier.properties
@@ -1,14 +1,18 @@
-#Sun Feb 12 18:03:44 CET 2023
+#Mon Feb 13 16:17:10 CET 2023
 last.fil=bez02Primo.json
+menu.2=F\:\\java\\photon2\\bezier\\dati\\bez03Test.json
+menu.1=F\:\\java\\photon2\\bezier\\dati\\bez03Primo.json
+menu.0=F\:\\java\\photon2\\bezier\\dati\\bez02Primo.json
 last.dir=F\:\\java\\photon2\\bezier\\dati
+menu.3=F\:\\java\\photon2\\bezier\\dati\\bez01Primo.json
 disegna.griglia=true
-tipo.curva=Bezier
+tipo.curva=Spline
 opts.dimy=182
-frame.posx=-1212
+frame.posx=-1592
 opts.dimx=358
-frame.posy=250
-opts.posx=-1556
-opts.posy=351
-frame.dimy=623
-frame.dimx=845
+frame.posy=255
+opts.posx=-1946
+opts.posy=312
+frame.dimy=763
+frame.dimx=1225
 bordo.disegna=true
